--- a/css/main.sass
+++ b/css/main.sass
@@ -1,2 +1,17 @@
+/* Definir Variables cuando se vayan a utilizar en varias instrucciones*/
+
+
+
+$font-size: 16px
+$font-family: Arial, Sans-serif
+
+h1
+    color: #89DB1A
+
 body
-    background : #402CDA
+    background : white
+    font-family: $font-family
+    font-size: $font-size
+
+li
+    color: blue
